--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fs-extra": "8.1.0",
     "html-webpack-plugin": "^4.0.4",
     "jest": "^24.9.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "0.8.0",
     "mri": "^1.1.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-flexbugs-fixes": "^4.2.0",
